--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="usa">Капитан Америка - молодой американский парень, который стал объектом эксперимента и получил повышенные физические способности.</string>
     <string name="jelezo">Железный человек, богатый изобретатель, создал мощный боевой костюм из железа. Этот костюм придает ему силу, невероятную выносливость и защиту.</string>
     <string name="tor">Тор - супергерой, основанный на скандинавском боге Торе. Он обладает множеством суперсил, которые делают его одним из наиболее мощных персонажей.</string>
+    <string name="w1">Это прототип перчатки расамахи, добавляет +10 к атаке</string>
+    <string name="w2">Это прототип перчатки бесконечности, добавляет +10 к магии</string>
+    <string name="w3">Это бомба, добавляет +15 к атаке и -10 к магии</string>
+    <string name="w4">Это магический бластер, добавляет +20 к магии и -20 к атаке</string>
+    <string name="z1">Это щит, добавляет +10 к защите</string>
+    <string name="z2">Это талисман бетмена, добавляет +15 к защите и -10 к магии</string>
+    <string name="z3">Это чизи, добавляет +15 к защите и -10 к атаке</string>
+    <string name="z4">Это талисман, добавляет +20 к защите и -10 к здоровью</string>
 </resources>
