--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,22 @@
     <string name="tor">Тор - супергерой, основанный на скандинавском боге Торе. Он обладает множеством суперсил, которые делают его одним из наиболее мощных персонажей.</string>
     <string name="w1">Это прототип перчатки расамахи, добавляет +10 к атаке</string>
     <string name="w2">Это прототип перчатки бесконечности, добавляет +10 к магии</string>
-    <string name="w3">Это бомба, добавляет +15 к атаке и -10 к магии</string>
-    <string name="w4">Это магический бластер, добавляет +20 к магии и -20 к атаке</string>
+    <string name="w3">Это бомба, добавляет +15 к атаке и -10 к защите</string>
+    <string name="w4">Это магический бластер, добавляет +20 к магии и -10 к здоровью</string>
     <string name="z1">Это щит, добавляет +10 к защите</string>
     <string name="z2">Это талисман бетмена, добавляет +15 к защите и -10 к магии</string>
     <string name="z3">Это чизи, добавляет +15 к защите и -10 к атаке</string>
     <string name="z4">Это талисман, добавляет +20 к защите и -10 к здоровью</string>
+    <string name="hpZl">Инфо:Это зелье добавляет +100 к здоровью</string>
+    <string name="powerZl">Инфо:Это зелье добавляет +50 к атаке</string>
+    <string name="zahitaZl">Инфо:Это зелье добавляет +50 к защите</string>
+    <string name="magikZl">Инфо:Это зелье добавляет +50 к магии</string>
+    <string name="w1b">Это прототип перчатки расамахи, добавляет +100 к атаке</string>
+    <string name="w2b">Это прототип перчатки бесконечности, добавляет +100 к магии</string>
+    <string name="w3b">Это бомба, добавляет +200 к атаке и -50 к защите</string>
+    <string name="w4b">Это магический бластер, добавляет +300 к магии и -100 к здоровью</string>
+    <string name="z1b">Это щит, добавляет +100 к защите</string>
+    <string name="z2b">Это талисман бетмена, добавляет +200 к защите и -50 к магии</string>
+    <string name="z3b">Это чизи, добавляет +200 к защите и -50 к атаке</string>
+    <string name="z4b">Это талисман, добавляет +300 к защите и -100 к здоровью</string>
 </resources>
